{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 36,
  "lineage": "0dd1684a-5aa0-3cf2-9e51-20d6de9f5b52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "despliegue-terraform-ec2-NGNX1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "despliegue-terraform-ec2-NGNX2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "despliegue-terraform-ec2-WP",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:internet-gateway/igw-0e31573b5a02d8d70",
            "id": "igw-0e31573b5a02d8d70",
            "owner_id": "029614539700",
            "tags": {
              "Name": "igwpruebatf2"
            },
            "tags_all": {
              "Name": "igwpruebatf2"
            },
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "test",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:029614539700:targetgroup/instances-ngnx/559a5d3b836d4255",
            "arn_suffix": "targetgroup/instances-ngnx/559a5d3b836d4255",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:029614539700:targetgroup/instances-ngnx/559a5d3b836d4255",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "instances-ngnx",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interfaces-NGNX1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:network-interface/eni-0667cffe20dad0e71",
            "id": "eni-0667cffe20dad0e71",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:dc:f6:36:ca:c3",
            "owner_id": "029614539700",
            "private_ip": "10.0.1.15",
            "private_ip_list": [
              "10.0.1.15"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.15"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01fecab2f83e24cca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b11842f8b04f4b5",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.g9subnet1",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_interface",
      "name": "interfaces-NGNX2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:network-interface/eni-00d729c84e7d878cd",
            "id": "eni-00d729c84e7d878cd",
            "interface_type": "interface",
            "ipv4_prefix_count": 0,
            "ipv6_address_count": 0,
            "ipv6_address_list_enabled": false,
            "ipv6_prefix_count": 0,
            "mac_address": "12:28:df:b3:17:ab",
            "owner_id": "029614539700",
            "private_ip": "10.0.1.16",
            "private_ip_list": [
              "10.0.1.16"
            ],
            "private_ip_list_enabled": false,
            "private_ips": [
              "10.0.1.16"
            ],
            "private_ips_count": 0,
            "security_groups": [
              "sg-01fecab2f83e24cca"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04b11842f8b04f4b5",
            "tags": {
              "Name": "primary_network_interface"
            },
            "tags_all": {
              "Name": "primary_network_interface"
            }
          },
          "dependencies": [
            "aws_subnet.g9subnet1",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "g9route_table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:route-table/rtb-06f039e537c1b8465",
            "id": "rtb-06f039e537c1b8465",
            "owner_id": "029614539700",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0e31573b5a02d8d70",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "test-terraform-sg-ngnx",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:security-group/sg-0cce6ce544d2ea213",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cce6ce544d2ea213",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "test-terraform-sg",
            "name_prefix": "",
            "owner_id": "029614539700",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g9subnet1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:subnet/subnet-04b11842f8b04f4b5",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04b11842f8b04f4b5",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029614539700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetg91-ue1a"
            },
            "tags_all": {
              "Name": "subnetg91-ue1a"
            },
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "g9subnet2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:subnet/subnet-09055947da65f81d7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09055947da65f81d7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "029614539700",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subnetg92-ue1b"
            },
            "tags_all": {
              "Name": "subnetg92-ue1b"
            },
            "vpc_id": "vpc-02c2ed4be6130215e"
          },
          "dependencies": [
            "aws_vpc.test-terraform-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "test-terraform-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:029614539700:vpc/vpc-02c2ed4be6130215e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e792b6c985ec6a05",
            "default_route_table_id": "rtb-0bd52c1df31c6701f",
            "default_security_group_id": "sg-01fecab2f83e24cca",
            "dhcp_options_id": "dopt-04a3f7a16a277805d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-02c2ed4be6130215e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0bd52c1df31c6701f",
            "owner_id": "029614539700"
          }
        }
      ]
    }
  ]
}